# guitar-ai

./: .gitignore  CLAUDE.md  DOCS.md  README.md  ROADMAP.md
.claude/: settings.json
.claude/commands/: inspect-app.md  install-local.md  release.md  restart-engine.md  signing-status.md  wake-app.md
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/src/: App.tsx
apps/desktop/src/components/: Sidebar.tsx  TitleBar.tsx  UpdateBanner.tsx
apps/desktop/src/components/onboarding/: Onboarding.tsx
apps/desktop/src/components/pedalboard/: AmpRig.tsx  ChainBuilder.tsx  PedalboardView.tsx  Recorder.tsx  Tuner.tsx
apps/desktop/src/components/player/: PlayerView.tsx  StemMixer.tsx
apps/desktop/src/components/settings/: SettingsView.tsx
apps/desktop/src/components/ui/: StatusDot.tsx  VuMeter.tsx
apps/desktop/src/lib/: api.ts  store.ts  ws.ts
apps/desktop/src/styles/: globals.css
apps/engine/: build_engine.py  pyproject.toml  run_engine.py
apps/engine/src/guitar_ai/: __init__.py  __main__.py  audio.py  download.py  irs.py  library.py  nam.py  paths.py  player.py  presets.py  recorder.py  server.py  stems.py  tuner.py  user_presets.py
scripts/: build_icon.py  dev.sh  install.sh  release.sh
