[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-ai-engine"
version = "0.1.0"
description = "Guitar AI audio engine — Pedalboard + Demucs + sounddevice"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "websockets>=13",
  "pydantic>=2.9",
  "sounddevice>=0.5",
  "soundfile>=0.12",
  "numpy>=1.26",
  "scipy>=1.13",
  "pedalboard>=0.9.22",
  "torch>=2.4",
  "torchaudio>=2.4",
  "torchcodec>=0.11",
  "yt-dlp>=2024.10.0",
  "mutagen>=1.47",
  "aiosqlite>=0.20",
  "python-multipart>=0.0.12",
  "rich>=13.9",
]

[project.scripts]
guitar-ai-engine = "guitar_ai.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"guitar_ai" = ["presets/*.json"]
